Fixed build error and some deprecation.